--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>LeetCode</groupId>
   <artifactId>LeetCode</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  
+  <version>0.0.1-SNAPSHOT</version><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>11</source><target>11</target></configuration></plugin></plugins></build>
+
 	<properties>
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
